--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,1 +1,7 @@
+/LogContent.html
+/about-icon.png
+/jquery-1.11.3.min.js
+/jquery.dynacloud-5.js
+/king-julien.jpg
+/open_folder_add_256.png
 /application/
